# NyarchCustomize

./: README.md  install.sh  meson.build  moe.nyarchlinux.customize.json  nyarchcustomize.flatpak  run.sh
data/: meson.build  moe.nyarchlinux.customize.appdata.xml.in  moe.nyarchlinux.customize.desktop.in  moe.nyarchlinux.customize.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: layoutgrid.ui  layouts.py  main.py  meson.build  nyarchcustomize.gresource.xml  nyarchcustomize.in  theming.ui  window.py  window.ui
